testsuite/tests/grammar/invalid_lexers/token_action_2.lkt
import common

lexer foo_lexer {
    @text(1) Example <- "example"
}
